--- a/src/ball_game.html
+++ b/src/ball_game.html
@@ -38,6 +38,39 @@
         var leftPressed = false;
         var paddlePadding = 10;
         var isGameStarted = false;
+        var brickRowCount = 3;
+        var brickColumnCount = 5;
+        var brickWidth = 75;
+        var brickHeight = 20;
+        var brickPadding = 10;
+        var brickOffsetTop = 30;
+        var brickOffsetLeft = 30;
+        var bricks = []
+
+
+        for (var c = 0; c < brickColumnCount; c++) {
+            bricks[c] = [];
+            for (var r = 0; r < brickRowCount; r++) {
+                bricks[c][r] = { x: 0, y: 0 };
+            }
+        }
+
+
+        function drawBricks() {
+            for (var c = 0; c < brickColumnCount; c++) {
+                for (var r = 0; r < brickRowCount; r++) {
+                    var brickX = (c * (brickWidth + brickPadding)) + brickOffsetLeft;
+                    var brickY = (r * (brickHeight + brickPadding)) + brickOffsetTop;
+                    bricks[c][r].x = brickX;
+                    bricks[c][r].y = brickY;
+                    ctx.beginPath();
+                    ctx.rect(brickX, brickY, brickWidth, brickHeight);
+                    ctx.fillStyle = "#0095DD";
+                    ctx.fill();
+                    ctx.closePath();
+                }
+            }
+        }
 
         var drawBall = function () {
             ctx.beginPath();
@@ -80,7 +113,7 @@
             dy = -2.5;
             paddleX = (canvas.width - paddleWidth) / 2;
         };
-        
+
         var triggerGameOver = function () {
             if (y + dy > canvas.height - raidus) {
                 if (isBallBewteenPaddle()) {
@@ -103,6 +136,7 @@
 
         var draw = function () {
             clearCanvas();
+            drawBricks();
             drawBall();
             drawPaddle();
             collosion();
