--- a/src/ball_game.html
+++ b/src/ball_game.html
@@ -23,13 +23,16 @@
     <canvas id="myCanvas" width="480" height="320"></canvas>
 
     <script>
-
+        /*----------------------------------
+        * Game Variables
+        *----------------------------------*/
         var canvas = document.getElementById("myCanvas");
         var ctx = canvas.getContext("2d");
         var x = canvas.width / 2;
         var y = canvas.height - 30;
-        var dx = 2.5;
-        var dy = -2.5;
+        var ballspeed = 2.5;
+        var dx = Math.random() * (2.4 - 1) + 2.1;
+        var dy = -ballspeed;//-Math.random( ) * ballspeed;
         var raidus = 10;
         var paddleHeight = 10;
         var paddleWidth = 75;
@@ -47,14 +50,13 @@
         var brickOffsetLeft = 30;
         var bricks = []
 
-
+        /* Init Bricks Array */
         for (var c = 0; c < brickColumnCount; c++) {
             bricks[c] = [];
             for (var r = 0; r < brickRowCount; r++) {
                 bricks[c][r] = { x: 0, y: 0 };
             }
         }
-
 
         function drawBricks() {
             for (var c = 0; c < brickColumnCount; c++) {
@@ -97,6 +99,18 @@
             }
         };
 
+        var brickCollisionDetection = function() {
+            for (var c = 0; c < brickColumnCount; c++) {
+                for (var r = 0; r < brickRowCount; r++) {
+                    var b = bricks[c][r];
+                    if (x > b.x && x < b.x + brickWidth && y > b.y && y < b.y + brickHeight) {
+                        dy = -dy;
+                    }
+                }
+            }
+        }
+
+
         var isBallBewteenPaddle = function () {
             if (x > paddleX && x < (paddleX + paddleWidth)) {
                 return true;
@@ -109,8 +123,8 @@
             x = canvas.width / 2;
             y = canvas.height - 30;
             isGameStarted = false;
-            dx = 2.5;
-            dy = -2.5;
+            dx = Math.random() * (2.4 - 0.5) + 2.1;
+            dy = -ballspeed;
             paddleX = (canvas.width - paddleWidth) / 2;
         };
 
@@ -140,6 +154,7 @@
             drawBall();
             drawPaddle();
             collosion();
+            brickCollisionDetection();
             triggerGameOver();
             keyInputPaddleHandler();
             moveBall();
