Include game.js

--- a/src/ball_game_phaser.html
+++ b/src/ball_game_phaser.html
@@ -16,6 +16,7 @@
             margin: 0 auto;
         }
     </style>
+    <script src="js/game.js"></script>
     <script src="js/phaser.min.js"></script>
 </head>
 
@@ -24,14 +25,7 @@
         var game = new Phaser.Game(480, 320, Phaser.CANVAS, null, {
             preload: preload, create: create, update: update
         });
-        function preload() {
-            game.scale.scaleMode = Phaser.ScaleManager.SHOW_ALL;
-            game.scale.pageAlignHorizontally = true;
-            game.scale.pageAlignVertically = true;
-            game.stage.backgroundColor = '#eee';
-        }
-        function create() { }
-        function update() { }
+        
     </script>
 </body>
 
