add frame to explosion amination

--- a/src/dodge.html
+++ b/src/dodge.html
@@ -20,7 +20,10 @@
 </head>
 
 <body>
-    <script src="js/dodge.js"></script>
+    <div>
+        <script src="js/dodge.js"></script>
+    </div>
+
 </body>
 
 </html>
